# genome_info

./: README.md  build.py  pyproject.toml  setup.py
genome_info/: README.md  __init__.py
genome_info/core/: info.py  utilities.py
genome_info/genomes/: download.py  genomes.py  readers.py
genome_info/genomes/data/: __init__.py
genome_info/kmers/: 2bit.h  __init__.py  interval_kmer.c  interval_kmer.h  kmer_reader.c  kmer_reader.pxd  kmer_reader.pyx
