[tool.poetry]
name = "genome_info"
version = "1.0.8"
description = "Python package genome annotations"
authors = ["Kyle S. Smith <kyle.smith@stjude.org>"]
maintainers = ["Kyle S. Smith <kyle.smith@stjude.org>"]
repository = "https://github.com/kylessmith/genome_info"
documentation = "https://www.biosciencestack.com/static/genome_info/docs/index.html"
keywords = ["cython", "annotation", "genome"]
readme = 'README.md'
license = "GPL-2.0-or-later"
classifiers = [ "Development Status :: 4 - Beta",
                    "Environment :: Console",
                    "Intended Audience :: Developers",
                    "Intended Audience :: Science/Research",
                    "Operating System :: POSIX :: Linux",
                    "Programming Language :: Cython",
                    "Programming Language :: Python",
                    "Programming Language :: Python :: 3",
                    "Programming Language :: Python :: 3.6",
                    "Topic :: Scientific/Engineering",
                    "Topic :: Scientific/Engineering :: Mathematics",
                    "Topic :: Software Development :: Libraries",
                    "Topic :: Software Development :: Libraries :: Python Modules",
                    "Topic :: Scientific/Engineering :: Bio-Informatics"
                  ]
packages = [{ include = "genome_info" }]
include = ["genome_info/kmers/*.pyx", "genome_info/kmers/*.pxd", "genome_info/kmers/*.h", "genome_info/kmers/*.c", "genome_info/**/*.so"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.23.5"
cython = "^3.0.0"
pandas = "^2.0.0"
intervalframe = "^1.1.6"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0",
            "cython>=3.0.0",
            "numpy>=1.23.5",
            "pandas>=2.0.0",
            "setuptools>=65.5.0",
            "ailist>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.cibuildwheel]
skip = "cp36-* cp37-* cp38-* cp39-* pp37-* pp38-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"
build-verbosity = "3"

[tool.cython-lint]
max-line-length = 100
ignore = ['W191','E265','E303','E101','E128']
